--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ z-index: 1000;
 }
 .rotacao-botao{
 transform: rotate(-90deg);
-transform-origin: rigth center;
+transform-origin: right center;
 }
 .opcoes-acessibilidade{
 margin-top: 10px;
