--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
 
 :root {
     --laranja-claro: #FF862A;
+    --alto-contraste-fundo:#000000;
+    --alto-contraste-texto:#ffffff;
+    --alto-contraste-link:#ffd700;
 }
 
 body {
@@ -141,23 +144,43 @@ h2 {
     background-color: #F1EDEF;
 }
 .menu-acessibilidade{
-position: fixed;
-top: 2rem;
-right: 20px;
-z-index: 1000;
+    position: fixed;
+    top:2rem;
+    right:20px;
+    z-index: 1000;
 }
 .rotacao-botao{
-transform: rotate(-90deg);
-transform-origin: right center;
+    transform: rotate(-90deg);
+    transform-origin: right center;
 }
+
 .opcoes-acessibilidade{
-margin-top: 10px;
-display: flex;
-flex-direction: column;
+    margin-top:10px;
+    display: flex;
+    flex-direction: column;
 }
+
 .opcoes-acessibilidade button{
     margin-bottom: 5px;
 }
 .apresenta-lista{
-display: none;
+    display: none;
+}
+.alto-contraste{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}
+.alto-contraste header,
+.alto-contraste footer,
+.alto-contraste .formulario{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}
+.alto-contraste #tropicalia{
+    background: none;
+}
+.alto-contraste #galeria{
+    background-color: var(--alto-contraste-fundo);
+}.alto-contraste .fundo-galeria{
+    background: none;
 }
